Cambio en endpoint `GetSpecie`
Se agregó la capacidad de busqueda por nivel taxonómico. Se documentó
esta nueva  capacidad en los documentos del API.
Se cambió el campo de búsqueda `nom_sp` por `q` para hacerlo genérico.
